*** Unreleased ***

*** Version 21.04.00       (2021-04-22)   ***
- Enhancements
Move function calculPresence in dedicated class (WorkingHours)
Allows more permissive entries in working hours
Update DataTable libraries and remove flash buttons
Use APP_ENV in legacy code (config.php) and move uploaded files
Upgrade PHP to 7.4 in composer.json
Update install.sh : check if PHP version > 7.4, run composer update if needed
Upgrade symfony/flex to release 1.9.8
Start handling permissions in a YAML file
Symfonize framework index (planning/postes_cfg/index.php)
Symfonize working hours (edit and save)
Symfonize statistics index
Symfonize My Account page
Symfonize framework's seperation lines
Symfonize framework groups
Symfonize agents index page
Symfonize framework table edit/add
Add a param to define the switching time between half-day and full-day
Absences for remote working ability
Symfonize notifications save
Symfonize framework's group deletion
Deny holidays if planning started or validated
The user can select the validation level when adding an holiday
Statistics: remove former folder templates/statistiques
Notification page: move notifications.js to public/js/plb. Add baseURL to Ajax query
Hamac import: Optimize log
Symfonize models
Symfonize stats staturday
Integration with CircleCI (Continuous integration service)
Symfonize statistics absents
Symfonize_statistics agent
Symfonize statistics position summary
Symfonize statistics services
Symfonize statistics status
Symfonize admin index
Symfonize compensatory time
Symfonize stats by times
Symfonize support position
Symfonize framework tables restoring
Allow the selection of agents on different sites
Ability to check if SQL column exists  (idempotent DBRevs)
Move planning framework choice in dedicated twig template
Move planning's menu html code in dedicated twig template
Functional tests ability
Show agents firstname and surname in workinghours list

-Fixes
Remove HTML entities in closing days
Working hours fixes